<resources>
    <string name="app_name">Exerite_1.1</string>
    <string name="home">Home</string>
    <string name="exersise">Exersise</string>
    <string name="diet">Diet</string>
    <string name="journal">Journal</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="workout">Workout</string>
    <string name="item_5">Item 5</string>
    <string name="item_4">Item 4</string>
    <string name="item_3">Item 3</string>
    <string name="item_2">Item 2</string>
    <string name="item_1">Item 1</string>
    <string name="profile">Profile</string>
    <string name="Journal">Journal</string>
    <string name="try_exerite">Try Exerite</string>
    <string name="evertyhing_piling_up">Evertyhing Piling Up?</string>
</resources>