<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/home"
        android:icon="@drawable/baseline_add_home_24"/>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/exersise" />
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/diet" />
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/journal" />
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/settings" />
</menu>